Fix non-java 8 compatibility